...
            .fillMaxSize()
            .background(Color(0xFFFAFAFA))
            .padding(16.dp),
        verticalArrangement = Arrangement.Center,
    ) {
        Text(
            text = "I agree that my email which i have presented is used for generating my account certificates. I agree that my account and certificates are used to identify me in e-services. I'm aware that by entering my PIN code for authentification I verify that I have initiated a session, agree with it and that I am responsible for it's consenquences. I agree that i have made sure that the ve
            style = MaterialTheme.typography.bodyLarge,
            color = Color.Black,
            textAlign = TextAlign.Center,
            modifier = Modifier
                .fillMaxWidth()
                .padding(10.dp),
...
