...
            modifier = Modifier
                .fillMaxWidth()
                .padding(top = 5.dp),
        )

        PillButton(
            text = "Register",
            enabled = !uiState.isSubmitting,
            onClick = onSubmit,
            showProgress = uiState.isSubmitting,
            modifier = Modifier
                .fillMaxWidth()
                .padding(top = 10.dp),
...
